--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <div class="form-container">
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          class="form-input"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button class="form-button" type="submit">🔍</button>
+      </form>
+    </div>
+    <div class="gallery">
+      <!-- Картки зображень -->
+    </div>
+    <button type="button" class="load-more is-hidden">Load more</button>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
